--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,21 @@
 
     display: flex;
     flex-direction: row;
+    width: 200px;
     align-self: center;
     justify-items: center;
+    justify-content: center;
+    padding: 20px;
+    margin: 10px;
 
-    padding: -5px;
-    margin: -5px;
+
+
+}
+
+.resetButton{
+    display: block;
+    width: 100%;
+
 
 }
 
