--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,9 @@
     flex-direction: row;
     width: 200px;
     justify-content: space-between;
-
     padding: 20px;
     margin: 10px;
+    border-radius: 5px;
 
 }
 
@@ -44,14 +44,36 @@
 
 
 
+.opdracht2{
+
+
+    display: flex;
+    flex-direction:column;
+
+
+}
 
 
 
+#radioButton{
+
+    display: block;
+}
+
+#naw{
+    display: block;
+}
+
+#submit{
+
+    margin: 16px;
+}
 
 
+#textArea{
+    border-radius: 5px;
 
-
-
+}
 
 
 
