ready for step 2, making components

--- a/src/App.css
+++ b/src/App.css
@@ -44,13 +44,9 @@
 
 
 
-.opdracht2{
-
-
+.opdracht2 {
     display: flex;
-    flex-direction:column;
-
-
+    flex-direction: column;
 }
 
 
@@ -72,9 +68,12 @@
 
 #textArea{
     border-radius: 5px;
-
 }
-
+#radioButton1{
+    padding-left: 20px;
+    display: none
+;
+}
 
 
 
